traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if ((c<=0 && c>=6) || (c<=14 && c>=20)  || (c<=28 && c>=34) ||(c<=42 && c>=48)){
                                                                                   ^TraversalZigZag:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if ((c<=0 && c>=6) || (c<=14 && c>=20)  || (c<=28 && c>=34) ||(c<=42 && c>=48)){
    ^