traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
    def positionFinale():Boolean={
    var c=0
    if ((c<=0 && c>=6) || (c<=14 && c>=20)  || (c<=28 && c>=34) ||(c<=42 && c>=48)){
      
    }
    
  }
  
positionFinale()
}